--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,9 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
+        mavenCentral()
+        jcenter()
     }
 }
 dependencyResolutionManagement {
@@ -10,7 +13,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+        jcenter()
     }
+
 }
 rootProject.name = "foursquare-api-sample"
 include ':app'
